--- a/secretword/src/index.css
+++ b/secretword/src/index.css
@@ -12,3 +12,20 @@ body {
     color: #fff;
 }
 
+
+button {
+    background-color: #1646a0;
+    color: #FFF;
+    padding: 0 45px;
+    border: 2px solid #FFF;
+    border-radius: 25px;
+    height: 50px;
+    text-transform: uppercase;
+    font-weight: bolder;
+    cursor: pointer;
+    transition: .4s;
+}
+
+button:hover { 
+    background-color: #0923af;
+}
